--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
         uses: actions/checkout@v2  # Re-checks out the code for deployment
 
       - name: Deploy to Vercel
-        run: vercel --prod  # Runs the Vercel deployment in production mode
         env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}  # Uses the Vercel token from GitHub Secrets
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}  # Pulls Vercel token from GitHub secrets
+        run: npx vercel --prod --token $VERCEL_TOKEN
+        #run: npx vercel --prod  # Runs the Vercel deployment in production mode
+        #env:
+        #  VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}  # Uses the Vercel token from GitHub Secrets
