--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Deploy to Vercel
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}  # Pulls Vercel token from GitHub secrets
-        run: npx vercel --prod --token $VERCEL_TOKEN
+        run: npx vercel --prod --yes --token $VERCEL_TOKEN 
         #run: npx vercel --prod  # Runs the Vercel deployment in production mode
         #env:
         #  VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}  # Uses the Vercel token from GitHub Secrets
