--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
   # Job to deploy the application after build
   deploy:
     runs-on: ubuntu-latest
-    needs: build  # Ensures the deploy job runs only after the build job completes successfully
+    needs: tests  # Ensures the deploy job runs only after the build job completes successfully
 
     steps:
       - name: Checkout code
