--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,33 +10,27 @@ on:
       - master
 
 jobs:
-  eslint:
-    name: Check Syntax with ESLint
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
+  build:
+    runs-on: ubuntu-latest  # This specifies the OS for the job
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-        
-      - name: Use Node.js ${{ matrix.node-version }} to Check Lint
-        uses: actions/setup-node@v3
+        uses: actions/checkout@v2  # Checks out the code from your repository
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2  # Sets up the Node.js environment
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-          
-      - name: Install Dependencies
-        run: npm ci
-        
-      - name: Run ESLint
-        run: npm run lint
+          node-version: '16'  # Specifies the version of Node.js
+
+      - name: Install dependencies
+        run: npm install  # Installs the required dependencies
+
+      - name: Build the app
+        run: npm run build  # Builds the React app for production
 
   tests:
     name: Run Tests
-    needs: eslint
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
