--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest  # This specifies the OS for the job
 
     steps:
@@ -53,6 +54,7 @@ jobs:
       #  run: npm run build  # Builds the React app for production
   # Job to deploy the application after build
   deploy:
+    name: Deploy
     runs-on: ubuntu-latest
     needs: tests  # Ensures the deploy job runs only after the build job completes successfully
 
